Lab 4: refactor for clean code