@@ -1,20 +1,36 @@
 package ua.edu.znu.flags;
 
-import javax.swing.*;
-import java.awt.*;
-import java.awt.event.*;
-import java.util.*;
+import java.awt.BorderLayout;
+import java.awt.Font;
+import java.util.ArrayList;
 import java.util.List;
+import javax.swing.BoxLayout;
+import javax.swing.JButton;
+import javax.swing.JFrame;
+import javax.swing.JMenu;
+import javax.swing.JMenuBar;
+import javax.swing.JMenuItem;
+import javax.swing.JOptionPane;
+import javax.swing.JPanel;
+import javax.swing.JTextArea;
+import javax.swing.SwingUtilities;
+import javax.swing.WindowConstants;
 
+/**
+ * Застосунок-тест із одно- та багатоваріантними питаннями.
+ */
 public class QuizApp {
+
+    private static final QuestionRenderer SINGLE = new SingleChoiceRenderer();
+    private static final QuestionRenderer MULTI  = new MultiChoiceRenderer();
 
     private JFrame frame;
     private JTextArea questionArea;
     private JPanel answerPanel;
-    private JButton nextButton;
-    private int currentQuestionIndex = 0;
-    private int score = 0;
-    private List<Question> questions;
+
+    private final List<Question> questions = new ArrayList<>();
+    private int currentQuestionIndex;
+    private int score;
     private String userName = "Анонім";
 
     public QuizApp() {
@@ -23,126 +39,115 @@ public class QuizApp {
     }
 
     private void initializeQuestions() {
-        questions = new ArrayList<>();
-
-        // Одноваріантне питання
         questions.add(new Question(
                 "Яка столиця України?",
-                Arrays.asList("Київ", "Львів", "Одеса"),
-                Arrays.asList(0),
-                false
-        ));
-
-        // Багатоваріантне питання
+                List.of("Київ", "Львів", "Одеса"),
+                List.of(0),
+                SINGLE));
         questions.add(new Question(
-                "Які з цих міста знаходяться в Україні?",
-                Arrays.asList("Київ", "Москва", "Лондон", "Львів"),
-                Arrays.asList(0, 3),
-                true
-        ));
+                "Які з цих міст знаходяться в Україні?",
+                List.of("Київ", "Москва", "Лондон", "Львів"),
+                List.of(0, 3),
+                MULTI));
     }
 
     private void initializeUI() {
-        frame = new JFrame("Тестування");
-        frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-        frame.setSize(600, 400);
-        frame.setLayout(new BorderLayout());
+        frame = createMainFrame();
+        frame.setJMenuBar(buildMenuBar());
+        frame.add(buildQuestionArea(), BorderLayout.NORTH);
+        frame.add(buildAnswerPanel(), BorderLayout.CENTER);
+        frame.add(buildNextButton(), BorderLayout.SOUTH);
+        displayQuestion();
+        frame.setVisible(true);
+    }
 
-        // Меню
-        JMenuBar menuBar = new JMenuBar();
+    private JFrame createMainFrame() {
+        JFrame f = new JFrame("Тестування");
+        f.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
+        f.setSize(600, 400);
+        f.setLayout(new BorderLayout());
+        return f;
+    }
+
+    private JMenuBar buildMenuBar() {
+        JMenuBar bar = new JMenuBar();
         JMenu menu = new JMenu("Меню");
-        JMenuItem enterNameItem = new JMenuItem("Ввести ім’я");
-        enterNameItem.addActionListener(e -> {
-            String input = JOptionPane.showInputDialog(frame, "Введіть ім’я:");
-            if (input != null && !input.trim().isEmpty()) {
-                userName = input.trim();
-            } else if (input != null) {
-                JOptionPane.showMessageDialog(frame,
-                        "Ім’я не може бути порожнім.",
-                        "Попередження",
-                        JOptionPane.WARNING_MESSAGE);
-            }
-        });
-        menu.add(enterNameItem);
-        menuBar.add(menu);
-        frame.setJMenuBar(menuBar);
+        JMenuItem enterName = new JMenuItem("Ввести ім'я");
+        enterName.addActionListener(e -> askUserName());
+        menu.add(enterName);
+        bar.add(menu);
+        return bar;
+    }
 
-        // Питання
+    private void askUserName() {
+        String input = JOptionPane.showInputDialog(frame, "Введіть ім'я:");
+        if (input == null) {
+            return;
+        }
+        String trimmed = input.trim();
+        if (trimmed.isEmpty()) {
+            showWarning("Попередження", "Ім'я не може бути порожнім.");
+        } else {
+            userName = trimmed;
+        }
+    }
+
+    private JTextArea buildQuestionArea() {
         questionArea = new JTextArea();
         questionArea.setEditable(false);
         questionArea.setFont(new Font("Arial", Font.BOLD, 16));
-        frame.add(questionArea, BorderLayout.NORTH);
+        return questionArea;
+    }
 
-        // Панель відповідей
+    private JPanel buildAnswerPanel() {
         answerPanel = new JPanel();
         answerPanel.setLayout(new BoxLayout(answerPanel, BoxLayout.Y_AXIS));
-        frame.add(answerPanel, BorderLayout.CENTER);
+        return answerPanel;
+    }
 
-        // Кнопка
-        nextButton = new JButton("Далі");
-        nextButton.addActionListener(e -> processAnswer());
-        frame.add(nextButton, BorderLayout.SOUTH);
-
-        displayQuestion();
-
-        frame.setVisible(true);
+    private JButton buildNextButton() {
+        JButton button = new JButton("Далі");
+        button.addActionListener(e -> processAnswer());
+        return button;
     }
 
     private void displayQuestion() {
         answerPanel.removeAll();
-
         if (currentQuestionIndex >= questions.size()) {
             showResult();
             return;
         }
-
         Question q = questions.get(currentQuestionIndex);
-        questionArea.setText("Питання " + (currentQuestionIndex + 1) + ": " + q.getQuestionText());
-
-        ButtonGroup group = new ButtonGroup();
-        for (int i = 0; i < q.getOptions().size(); i++) {
-            AbstractButton button;
-            if (q.isMultiple()) {
-                button = new JCheckBox(q.getOptions().get(i));
-            } else {
-                button = new JRadioButton(q.getOptions().get(i));
-                group.add(button);
-            }
-            button.setActionCommand(String.valueOf(i));
-            answerPanel.add(button);
-        }
-
+        questionArea.setText("Питання " + (currentQuestionIndex + 1)
+                + ": " + q.getQuestionText());
+        q.getRenderer().renderInto(answerPanel, q);
         answerPanel.revalidate();
         answerPanel.repaint();
     }
 
     private void processAnswer() {
-        List<Integer> userAnswers = new ArrayList<>();
-        Component[] components = answerPanel.getComponents();
-
-        for (Component comp : components) {
-            if (comp instanceof AbstractButton) {
-                AbstractButton button = (AbstractButton) comp;
-                if (button.isSelected()) {
-                    userAnswers.add(Integer.parseInt(button.getActionCommand()));
-                }
-            }
-        }
+        Question q = questions.get(currentQuestionIndex);
+        List<Integer> userAnswers = q.getRenderer().collectAnswers(answerPanel);
 
         if (userAnswers.isEmpty()) {
-            JOptionPane.showMessageDialog(frame,
-                    "Будь ласка, оберіть хоча б одну відповідь!",
-                    "Помилка вводу",
-                    JOptionPane.WARNING_MESSAGE);
+            showWarning("Помилка вводу",
+                    "Будь ласка, оберіть хоча б одну відповідь!");
             return;
         }
-
-        if (questions.get(currentQuestionIndex).isCorrect(userAnswers)) {
+        if (q.isCorrect(userAnswers)) {
             score++;
         }
+        advance();
+    }
 
+    private void advance() {
         currentQuestionIndex++;
         displayQuestion();
+    }
+
+    private void showWarning(String title, String message) {
+        JOptionPane.showMessageDialog(frame, message, title,
+                JOptionPane.WARNING_MESSAGE);
     }
 
     private void showResult() {
